--- a/openlms_users.routing.yml
+++ b/openlms_users.routing.yml
@@ -4,11 +4,11 @@ openlms_users.invite:
     _form: '\Drupal\openlms_users\Form\UsersForm'
     _title: 'You can share group invites through the help of this module'
   requirements:
-    _permission: 'access content'
+    _permission: 'openlms users invite'
 openlms_users.join:
   path: '/group/join'
   defaults:
     _form: '\Drupal\openlms_users\Form\JoinForm'
-    _title: 'You can share group invites through the help of this module'
+    _title: 'Join Group using Invite Code'
   requirements:
     _permission: 'access content'
